--- a/style.css
+++ b/style.css
@@ -13,17 +13,15 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    top: 15%;
-    left: 15%;
-    right: 15%;
-    bottom: 15%;
+    top: 10%;
+    left: 10%;
+    right: 10%;
+    bottom: 10%;
     padding: 50px;
     border-radius: 40px;
     box-shadow: 0px 0px 35px 18px rgba(7, 7, 7, 0.596);
-    background: rgba(7, 7, 7, 0.747);
+    background: rgb(7, 7, 7);
     align-items: center;
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
 }
 
 .loader {
