--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav .onglets button {
     color: white;
     position: relative;
     padding: 4px 25px;
-    margin-right: 15px;
+    margin-right: 20px;
     cursor: pointer;
     font-family: 'Baloo 2', cursive;
     font-size: 1.0em;
@@ -271,7 +271,7 @@ nav .onglets button:active {
         border: 3;
         border-radius: 25px;
         padding: 3px 18px;
-        margin-right: 10px;
+        margin-right: 8px;
         cursor: pointer;
         font-family: 'Baloo 2', cursive;
         font-size: 0.9em;
@@ -281,6 +281,7 @@ nav .onglets button:active {
     
     nav a {
         font-size: 1.6em;
+        margin-left: 8px;
     } 
 
     .content_page h1 {
