--- a/style.css
+++ b/style.css
@@ -150,7 +150,6 @@ nav .onglets button:active {
     transition-property: box-shadow;
     overflow: hidden;
     border-radius: 60px;
-    box-shadow: 0px -0px 0px 0px rgba(143, 64, 248, .5), 0px 0px 0px 0px rgba(39, 200, 255, .5);
 }
 
 .content_page .btn_download::after {
@@ -160,7 +159,7 @@ nav .onglets button:active {
     position: absolute;
     top: -90px;
     left: -100px;
-    background-image: linear-gradient(225deg, #0deca9 0%, #40879b 50%, #e43e14 100%);
+    background-image: linear-gradient(225deg, #ffc9b3 0%, #aa89a0 50%, #2a2a84 100%);
     z-index: -1;
     transition: all .5s;
 }
@@ -170,11 +169,11 @@ nav .onglets button:active {
 }
 
 .content_page .btn_download:hover {
-    box-shadow: 10px -10px 25px 0px rgba(235, 63, 11, 0.25), -10px 10px 25px 0px rgba(39, 200, 255, .25);
+    box-shadow: 10px -10px 25px 0px #2a2a8493, -10px 10px 25px 0px #aa89a0af;
 }
 
 .content_page .btn_download:active {
-    box-shadow: 5px -5px 20px 0px rgba(235, 63, 11, 0.25), -5px 5px 20px 0px rgba(39, 200, 255, .25);
+    box-shadow: 5px -5px 20px 0px #2a2a846e, -5px 5px 20px 0px #aa89a081;
     transition: all .1s;
 }
 
@@ -188,7 +187,6 @@ nav .onglets button:active {
     transition-property: box-shadow;
     overflow: hidden;
     border-radius: 60px;
-    box-shadow: 0px -0px 0px 0px rgba(143, 64, 248, .5), 0px 0px 0px 0px rgba(39, 200, 255, .5);
 }
 
 .content_page .btn_github_project img {
@@ -202,7 +200,7 @@ nav .onglets button:active {
     position: absolute;
     top: -60px;
     left: -80px;
-    background-image: linear-gradient(225deg, #0deca9 0%, #40879b 50%, #e43e14 100%);
+    background-image: linear-gradient(225deg, #ffc9b3 0%, #aa89a0 50%, #2a2a84 100%);
     z-index: -1;
     transition: all .5s;
 }
@@ -212,11 +210,11 @@ nav .onglets button:active {
 }
 
 .content_page .btn_github_project:hover {
-    box-shadow: 10px -10px 25px 0px rgba(235, 63, 11, 0.25), -10px 10px 25px 0px rgba(39, 200, 255, .25);
+    box-shadow: 10px -10px 25px 0px #2a2a8493, -10px 10px 25px 0px #aa89a0af;
 }
 
 .content_page .btn_github_project:active {
-    box-shadow: 5px -5px 20px 0px rgba(235, 63, 11, 0.25), -5px 5px 20px 0px rgba(39, 200, 255, .25);
+    box-shadow: 5px -5px 20px 0px #2a2a846e, -5px 5px 20px 0px #aa89a081;
     transition: all .1s;
 }
 
