--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ nav .onglets button:active {
     }
 
     .content_page .btn_download:hover {
-        box-shadow: 5px -5px 15px 0px rgba(235, 63, 11, 0.25), -5px 5px 15px 0px rgba(39, 200, 255, .25);
+        box-shadow: 5px -5px 20px 0px #2a2a846e, -5px 5px 20px 0px #aa89a081;
     }
 
     .content_page .btn_github_project {
@@ -313,7 +313,7 @@ nav .onglets button:active {
     }
 
     .content_page .btn_github_project:hover {
-        box-shadow: 5px -5px 15px 0px rgba(235, 63, 11, 0.25), -5px 5px 15px 0px rgba(39, 200, 255, .25);
+        box-shadow: 5px -5px 20px 0px #2a2a846e, -5px 5px 20px 0px #aa89a081;
     }
 
     .content_page .btn_github_project img {
@@ -344,7 +344,7 @@ nav .onglets button:active {
     }
 
     .content_page .btn_download:hover {
-        box-shadow: 5px -5px 15px 0px rgba(235, 63, 11, 0.25), -5px 5px 15px 0px rgba(39, 200, 255, .25);
+        box-shadow: 5px -5px 20px 0px #2a2a846e, -5px 5px 20px 0px #aa89a081;
     }
 
     .content_page .btn_github_project {
@@ -353,7 +353,7 @@ nav .onglets button:active {
     }
 
     .content_page .btn_github_project:hover {
-        box-shadow: 5px -5px 15px 0px rgba(235, 63, 11, 0.25), -5px 5px 15px 0px rgba(39, 200, 255, .25);
+        box-shadow: 5px -5px 20px 0px #2a2a846e, -5px 5px 20px 0px #aa89a081;
     }
 
     .content_page .btn_github_project img {
